feat: adding income to customer controller and api specs
